fix font size too small

--- a/style.css
+++ b/style.css
@@ -106,9 +106,9 @@ tr{
 @media (max-width: 700px) {
 
     td{
-        font-size: 0.5rem;
+        font-size: 0.7rem;
         line-height: 0.75rem;
-        padding: 0.5rem;
+        padding: 0.7rem;
     }
     h1{font-size: 15px};
     h2{font-size: 10px};
